# or_llm_agent

./: .conflict-files  .env.example  README.md  heuristic_prompts.py  heuristic_skeleton.py  llm_heuristic.py  or_llm_show.py  test.py  utils.py
.auto-resolution/: .gitignore  README_CN.md  heuristic_prompts.py
.auto-resolution/MCP/: README.md
.auto-resolution/data/: bar_math_accuracy.py  bar_model_compare.py  convert_industryOR_to_default_format.py
.auto-resolution/data/datasets/: MAMO_EasyLP.json
.conflict-base-0/: llm_heuristic.py
.conflict-base-0/data/: bar_model_ablility.py  process_complexor_dataset.py  process_dataset.py
.conflict-side-0/: heuristic_skeleton.py  or_llm_eval.py  pyproject.toml  requirements.txt  utils.py
.conflict-side-0/MCP/: README_MCP_CN.md
.conflict-side-0/data/: analyze_types_problems.py
.conflict-side-0/data/datasets/: BWOR.json  question_lengths.txt
.conflict-side-1/: heuristic_prompts.py  llm_heuristic.py  or_llm_eval_async_resilient.py  run_eval_batch_agent.sh  utils.py
.conflict-side-1/data/: convert_default_to_industryOR_format.py  question_length.py  regenerate_index.py
.conflict-side-1/data/datasets/: IndustryOR.json  NL4OPT_with_optimal_solution.json
MCP/: mcp_server.py
data/: bar_agent_mode.py  process_lpwp_dataset.py  save_json.py
data/datasets/: MAMO_ComplexLP.json
